--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ body {
   line-height: 1.1;
   position: relative;
   margin: 0;
-}
+  } 
 .quote:before, .quote:after {
   font-size: 6rem;
   line-height: 2.5rem;
@@ -40,6 +40,7 @@ body {
   letter-spacing: 0.05em;
   line-height: 1.1;
   text-align: right;
+  margin-right: 4em;
 }
 .source:before {
   content: "—";
@@ -49,9 +50,6 @@ body {
 }
 .citation:before {
   content: ", ";
-  font-style: normal;
-}
-.year {
   font-style: normal;
 }
 .year:before {
